--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.36.0
-ffmpeg-python==0.2.0
-openai-whisper==20231117
-requests==2.31.0
+streamlit==1.38.0
+python-docx==1.1.2
+PyPDF2==3.0.1
 python-dotenv==1.0.1
-llama-index==0.10.40
-llama-index-llms-google-genai==0.1.3
-google-generativeai==0.5.4
+llama-index==0.10.44
+requests==2.32.3
+reportlab==4.2.2
