--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-python-docx
-PyPDF2
-python-dotenv
-llama-index
-llama-index-llms-google-genai
-llama-index-embeddings-huggingface
-requests
-reportlab
-cairosvg
+streamlit==1.38.0
+python-docx==1.1.2
+PyPDF2==3.0.1
+python-dotenv==1.0.1
+llama-index==0.10.44
+llama-index-llms-google-genai==0.3.0
+llama-index-embeddings-huggingface==0.3.0
+requests==2.32.3
+reportlab==4.2.2
+cairosvg==2.0.0
