Refactor requirements.txt to include sentence-transformers and markdown-pdf

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit
-python-docx
-PyPDF2
-python-dotenv
-llama-index
-llama-index-llms-google-genai
-llama-index-embeddings-huggingface
-requests
-reportlab
-cairosvg
+streamlit 
+python-docx 
+PyPDF2 
+requests 
+python-dotenv 
+llama-index 
+llama-index-llms-google-genai 
+llama-index-embeddings-huggingface 
+sentence-transformers 
+markdown-pdf 
+
